@@ -1,0 +1,9 @@
+<header>Default SSL key size</header>
+
+By default, Virtualmin will create SSL keys for virtual servers that are
+512 bits long. However, since this may not be secure enough for some users
+or applications, this setting can be used to specify a larger size, such
+as 1024 and 2048 bits. <p>
+
+<footer>
+
